--- a/project/CURK/Mini-Project/CURK-2025-09-29/pbls-aads-embedding+ontoloyg-01.html
+++ b/project/CURK/Mini-Project/CURK-2025-09-29/pbls-aads-embedding+ontoloyg-01.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 지식 표현의 융합: 벡터 임베딩과 지식 그래프</title>
+    <title>AI 지식 표현의 융합: 임베딩과 지식 그래프</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!-- Chosen Palette: Calm Harmony (Stone, Teal, Slate) -->
-    <!-- Application Structure Plan: The application is structured as a narrative journey for the user, starting from fundamental concepts and progressing to advanced methodologies and practical applications. It uses a single-page, multi-section layout. The flow is: 1) Introduction to set the stage. 2) Side-by-side comparison of Core Concepts for foundational understanding. 3) An interactive tabbed section for deep-diving into different Methodologies, which is the core of the report. 4) A dynamic chart for an Interactive Comparison of these methods, allowing users to synthesize information. 5) An Application showcase to connect theory with practice. This structure was chosen because it breaks down a complex topic into digestible, interactive modules, facilitating exploration and learning better than a static, linear document. -->
+    <!-- Application Structure Plan: The application is structured as a narrative journey for the user, starting from fundamental concepts and progressing to advanced methodologies and practical applications. It uses a single-page, multi-section layout. The flow is: 1) Introduction to set the stage. 2) Side-by-side comparison of Core Concepts. 3) An interactive tabbed section for deep-diving into Methodologies. 4) A dynamic chart for an Interactive Comparison of these methods. 5) An Application showcase. 6) A new section for downloadable Analysis Reports from major AI models, providing external resources. This structure breaks down a complex topic into digestible, interactive modules, facilitating exploration and learning. -->
     <!-- Visualization & Content Choices: 
         - Core Concepts: Goal=Inform/Compare -> Viz=Two-column HTML/CSS layout -> Interaction=None -> Justification=Direct comparison of foundational ideas.
-        - Methodologies: Goal=Organize/Explain -> Viz=HTML/CSS-based diagrams within tabbed content -> Interaction=Clicking tabs to switch views -> Justification=Allows focused exploration of each complex method without clutter.
-        - Interactive Comparison: Goal=Compare/Synthesize -> Viz=Horizontal Bar Chart (Chart.js) -> Interaction=Buttons to filter/highlight data and update descriptive text -> Justification=Enables dynamic, user-driven comparison of abstract qualities, making differences tangible.
-        - Applications: Goal=Inform/Contextualize -> Viz=Grid of cards -> Interaction=Simple hover effects -> Justification=Provides a quick, scannable overview of real-world impact.
+        - Methodologies: Goal=Organize/Explain -> Viz=HTML/CSS-based diagrams within tabbed content -> Interaction=Clicking tabs to switch views -> Justification=Allows focused exploration.
+        - Interactive Comparison: Goal=Compare/Synthesize -> Viz=Horizontal Bar Chart (Chart.js) -> Interaction=Buttons to filter/highlight data -> Justification=Enables dynamic, user-driven comparison.
+        - Applications: Goal=Inform/Contextualize -> Viz=Grid of cards -> Interaction=Simple hover effects -> Justification=Quick, scannable overview.
+        - Analysis Reports: Goal=Inform/Extend -> Viz=Three-column card layout with logos and links -> Interaction=Clickable buttons -> Justification=Provides tangible, external comparative materials.
     -->
     <!-- CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     <style>
@@ -81,6 +82,7 @@
                 <a href="#methods" class="hover:text-teal-600">주요 방법론</a>
                 <a href="#comparison" class="hover:text-teal-600">성능 비교</a>
                 <a href="#applications" class="hover:text-teal-600">적용 분야</a>
+                <a href="#reports" class="hover:text-teal-600">분석 보고서</a>
             </nav>
         </div>
     </header>
@@ -218,7 +220,7 @@
             </div>
         </section>
 
-        <section id="applications" class="scroll-mt-20">
+        <section id="applications" class="mb-20 scroll-mt-20">
             <h3 class="text-3xl font-bold text-center mb-10">주요 적용 분야</h3>
              <p class="text-center text-stone-600 max-w-3xl mx-auto mb-8">벡터 임베딩과 지식 그래프의 융합은 다양한 AI 분야에서 혁신을 이끌고 있습니다.</p>
             <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -237,6 +239,39 @@
             </div>
         </section>
         
+        <section id="reports" class="mb-20 scroll-mt-20">
+            <h3 class="text-3xl font-bold text-center mb-10">AI 모델별 심층 분석 보고서</h3>
+            <p class="text-center text-stone-600 max-w-3xl mx-auto mb-8">주요 AI 연구 기관의 모델들이 생성한 심층 분석 보고서를 비교해 보세요. 각 보고서는 동일한 주제에 대해 독자적인 통찰력을 제공합니다.</p>
+            <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
+                <div class="bg-white p-8 rounded-lg shadow-md border border-gray-200 flex flex-col items-center text-center hover:shadow-xl transition-shadow">
+                    <div class="w-20 h-20 mb-4 flex items-center justify-center">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/1/13/ChatGPT-Logo.png" alt="OpenAI ChatGPT Logo" class="w-20 h-20 object-contain">
+                    </div>
+                    <h4 class="text-xl font-bold mb-2 text-slate-700">OpenAI ChatGPT 5 Pro</h4>
+                    <p class="text-sm text-stone-600 mb-6 flex-grow">당장 구현하여 활용가능한 실용적인 설명. v1.0 (2025-09-25)</p>
+                    <a href="#" class="mt-auto inline-block bg-teal-600 text-white font-bold py-2 px-6 rounded-full hover:bg-teal-700 transition-colors">보고서 보기 (PDF)</a>
+                </div>
+
+                <div class="bg-white p-8 rounded-lg shadow-md border border-gray-200 flex flex-col items-center text-center hover:shadow-xl transition-shadow">
+                    <div class="w-20 h-20 mb-4 flex items-center justify-center">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Google_Gemini_logo.svg" alt="Google Gemini Logo" class="w-20 h-20 object-contain">
+                    </div>
+                    <h4 class="text-xl font-bold mb-2 text-slate-700">Gemini 2.5 Pro</h4>
+                    <p class="text-sm text-stone-600 mb-6 flex-grow">방대한 참고문헌을 포함한 상세한 설명. v1.0 (2025-09-25)</p>
+                    <a href="#" class="mt-auto inline-block bg-teal-600 text-white font-bold py-2 px-6 rounded-full hover:bg-teal-700 transition-colors">보고서 보기 (PDF)</a>
+                </div>
+
+                <div class="bg-white p-8 rounded-lg shadow-md border border-gray-200 flex flex-col items-center text-center hover:shadow-xl transition-shadow">
+                    <div class="w-20 h-20 mb-4 flex items-center justify-center">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Claude_AI_logo.svg" alt="Anthropic Claude Logo" class="w-20 h-20 object-contain">
+                    </div>
+                    <h4 class="text-xl font-bold mb-2 text-slate-700">Anthropic Claude Opus 4.1</h4>
+                    <p class="text-sm text-stone-600 mb-6 flex-grow">핵심을 다루는 컴팩트한 보고서. v1.0 (2025-09-25)</p>
+                    <a href="#" class="mt-auto inline-block bg-teal-600 text-white font-bold py-2 px-6 rounded-full hover:bg-teal-700 transition-colors">보고서 보기 (PDF)</a>
+                </div>
+            </div>
+        </section>
+
         <section class="mt-20 text-center">
             <h3 class="text-3xl font-bold mb-4">결론 및 전망</h3>
             <p class="text-lg text-stone-600 max-w-3xl mx-auto">
@@ -401,3 +436,6 @@
     </script>
 </body>
 </html>
+
+
+
