--- a/project/CURK/Mini-Project/CURK-2025-09-29/pbls-embedding+ontoloyg-01.html
+++ b/project/CURK/Mini-Project/CURK-2025-09-29/pbls-embedding+ontoloyg-01.html
@@ -249,7 +249,7 @@
                     </div>
                     <h4 class="text-xl font-bold mb-2 text-slate-700">OpenAI ChatGPT 5 Pro</h4>
                     <p class="text-sm text-stone-600 mb-6 flex-grow">당장 구현하여 활용가능한 실용적인 설명. v1.0 (2025-09-25)</p>
-                    <a href="#" class="mt-auto inline-block bg-teal-600 text-white font-bold py-2 px-6 rounded-full hover:bg-teal-700 transition-colors">보고서 보기 (PDF)</a>
+                    <a href="./pbls-aads-embedding+ontoloyg-01-ChatGPT-01.pdf" class="mt-auto inline-block bg-teal-600 text-white font-bold py-2 px-6 rounded-full hover:bg-teal-700 transition-colors">보고서 보기 (PDF)</a>
                 </div>
 
                 <div class="bg-white p-8 rounded-lg shadow-md border border-gray-200 flex flex-col items-center text-center hover:shadow-xl transition-shadow">
@@ -258,7 +258,7 @@
                     </div>
                     <h4 class="text-xl font-bold mb-2 text-slate-700">Gemini 2.5 Pro</h4>
                     <p class="text-sm text-stone-600 mb-6 flex-grow">방대한 참고문헌을 포함한 상세한 설명. v1.0 (2025-09-25)</p>
-                    <a href="#" class="mt-auto inline-block bg-teal-600 text-white font-bold py-2 px-6 rounded-full hover:bg-teal-700 transition-colors">보고서 보기 (PDF)</a>
+                    <a href="./pbls-aads-embedding+ontoloyg-01-Gemini-01.pdf" class="mt-auto inline-block bg-teal-600 text-white font-bold py-2 px-6 rounded-full hover:bg-teal-700 transition-colors">보고서 보기 (PDF)</a>
                 </div>
 
                 <div class="bg-white p-8 rounded-lg shadow-md border border-gray-200 flex flex-col items-center text-center hover:shadow-xl transition-shadow">
@@ -267,7 +267,7 @@
                     </div>
                     <h4 class="text-xl font-bold mb-2 text-slate-700">Anthropic Claude Opus 4.1</h4>
                     <p class="text-sm text-stone-600 mb-6 flex-grow">핵심을 다루는 컴팩트한 보고서. v1.0 (2025-09-25)</p>
-                    <a href="#" class="mt-auto inline-block bg-teal-600 text-white font-bold py-2 px-6 rounded-full hover:bg-teal-700 transition-colors">보고서 보기 (PDF)</a>
+                    <a href="./pbls-aads-embedding+ontoloyg-01-Claude-01.pdf" class="mt-auto inline-block bg-teal-600 text-white font-bold py-2 px-6 rounded-full hover:bg-teal-700 transition-colors">보고서 보기 (PDF)</a>
                 </div>
             </div>
         </section>
