--- a/project/CURK/Mini-Project/CURK-2025-09-29/index.html
+++ b/project/CURK/Mini-Project/CURK-2025-09-29/index.html
@@ -84,14 +84,14 @@
     <meta property="og:url" content="https://blog.pebblous.ai/ko/interactive-reports/embedding-vs-knowledge-graph">
     <meta property="og:title" content="AI 지식 표현의 융합: 임베딩과 지식 그래프 | Pebblous">
     <meta property="og:description" content="AI의 핵심 지식 표현 기술인 벡터 임베딩과 온톨로지 지식 그래프를 결합하는 방법론을 시각적으로 탐구하고, 주요 AI 모델의 분석 보고서를 비교합니다.">
-    <meta property="og:image" content="https://www.pebblous.ai/og-images/embedding-report-og.png">
+    <meta property="og:image" content="https://pebblous.github.io/project/CURK/Mini-Project/CURK-2025-09-29/image/index.png">
 
     <!-- 트위터 공유 (Twitter Card) -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://blog.pebblous.ai/ko/interactive-reports/embedding-vs-knowledge-graph">
     <meta property="twitter:title" content="AI 지식 표현의 융합: 임베딩과 지식 그래프 | Pebblous">
     <meta property="twitter:description" content="AI의 핵심 지식 표현 기술인 벡터 임베딩과 온톨로지 지식 그래프를 결합하는 방법론을 시각적으로 탐구하고, 주요 AI 모델의 분석 보고서를 비교합니다.">
-    <meta property="twitter:image" content="https://www.pebblous.ai/og-images/embedding-report-og.png">
+    <meta property="twitter:image" content="https://pebblous.github.io/project/CURK/Mini-Project/CURK-2025-09-29/image/index.png">
 
 </head>
 <body class="bg-stone-50 text-stone-800 antialiased">
