--- a/project/CURK/Mini-Project/CURK-2025-09-29/index.html
+++ b/project/CURK/Mini-Project/CURK-2025-09-29/index.html
@@ -72,23 +72,23 @@
     <meta name="robots" content="index, follow">
     
     <!-- 다국어 SEO (Hreflang) -->
-    <link rel="alternate" hreflang="ko" href="https://blog.pebblous.ai/ko/interactive-reports/embedding-vs-knowledge-graph">
-    <link rel="alternate" hreflang="en" href="https://blog.pebblous.ai/en/interactive-reports/embedding-vs-knowledge-graph">
-    <link rel="alternate" hreflang="x-default" href="https://blog.pebblous.ai/en/interactive-reports/embedding-vs-knowledge-graph">
+    <link rel="alternate" hreflang="ko" href="https://pebblous.github.io/project/CURK/Mini-Project/CURK-2025-09-29">
+    <link rel="alternate" hreflang="en" href="https://pebblous.github.io/project/CURK/Mini-Project/CURK-2025-09-29">
+    <link rel="alternate" hreflang="x-default" href="https://pebblous.github.io/project/CURK/Mini-Project/CURK-2025-09-29">
 
     <!-- 표준 URL (Canonical URL) -->
-    <link rel="canonical" href="https://blog.pebblous.ai/ko/interactive-reports/embedding-vs-knowledge-graph">
+    <link rel="canonical" href="https://pebblous.github.io/project/CURK/Mini-Project/CURK-2025-09-29">
 
     <!-- 소셜 미디어 공유 (Open Graph) -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://blog.pebblous.ai/ko/interactive-reports/embedding-vs-knowledge-graph">
+    <meta property="og:url" content="https://pebblous.github.io/project/CURK/Mini-Project/CURK-2025-09-29">
     <meta property="og:title" content="AI 지식 표현의 융합: 임베딩과 지식 그래프 | Pebblous">
     <meta property="og:description" content="AI의 핵심 지식 표현 기술인 벡터 임베딩과 온톨로지 지식 그래프를 결합하는 방법론을 시각적으로 탐구하고, 주요 AI 모델의 분석 보고서를 비교합니다.">
     <meta property="og:image" content="https://pebblous.github.io/project/CURK/Mini-Project/CURK-2025-09-29/image/index.png">
 
     <!-- 트위터 공유 (Twitter Card) -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://blog.pebblous.ai/ko/interactive-reports/embedding-vs-knowledge-graph">
+    <meta property="twitter:url" content="https://pebblous.github.io/project/CURK/Mini-Project/CURK-2025-09-29">
     <meta property="twitter:title" content="AI 지식 표현의 융합: 임베딩과 지식 그래프 | Pebblous">
     <meta property="twitter:description" content="AI의 핵심 지식 표현 기술인 벡터 임베딩과 온톨로지 지식 그래프를 결합하는 방법론을 시각적으로 탐구하고, 주요 AI 모델의 분석 보고서를 비교합니다.">
     <meta property="twitter:image" content="https://pebblous.github.io/project/CURK/Mini-Project/CURK-2025-09-29/image/index.png">
