--- a/project/CURK/Mini-Project/CURK-2025-09-29/index.html
+++ b/project/CURK/Mini-Project/CURK-2025-09-29/index.html
@@ -93,7 +93,7 @@
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="https://pebblous.ai" target="_blank" rel="noopener noreferrer">
-                <img id="page-logo" src="https://pebblous.github.io/image/Pebblous_Brandmark_Orange.png" alt="Pebblous 로고" class="h-8 w-auto">
+                <img id="page-logo" src="https://blog.pebblous.ai/image/Pebblous_Brandmark_Orange.png" alt="Pebblous 로고" class="h-8 w-auto">
             </a>
             <nav class="hidden md:flex space-x-6 text-stone-600">
                 <a href="#concepts" class="hover:text-teal-600">핵심 개념</a>
@@ -381,17 +381,17 @@
             // 페이지 설정 (이 객체만 수정하여 각 페이지에 적용)
             // =================================================================
             const siteConfig = {
-                pageURL: "https://pebblous.github.io/project/CURK/Mini-Project/CURK-2025-09-29",
+                pageURL: "https://blog.pebblous.ai/project/CURK/Mini-Project/CURK-2025-09-29",
                 pageTitle: "AI를 위한 지식 표현: 벡터 임베딩과 지식 그래프 (1)",
                 mainTitle: "벡터 임베딩과 지식 그래프의 만남",
                 mainSubtitle: "AI가 데이터를 더 깊이 이해하고 인간처럼 추론하게 하려면 어떻게 해야 할까요? 이 보고서는 두 가지 강력한 지식 표현 기술, 즉 데이터의 '의미'를 포착하는 벡터 임베딩과 데이터 간의 '관계'를 정의하는 지식 그래프를 결합하는 최신 방법론을 탐구합니다. 이 둘의 시너지는 온톨로지와 더불어 차세대 AI 기술의 핵심이며 Agentic AI의 기초가 될 것입니다.",
                 seoDescription: "AI의 핵심 지식 표현 기술인 벡터 임베딩과 온톨로지 지식 그래프를 결합하는 방법론을 시각적으로 탐구하고, 주요 AI 모델이 생성한 분석 보고서를 비교합니다.",
                 seoKeywords: ["Pebblous", "페블러스", "데이터클리닉", "페블로스코프", "데이터", "온톨로지", "지식 그래프", "지식그래프", "벡터DB", "벡터 DB", "벡터 임베딩", "벡터", "임베딩", "AI", "인공지능"],
-                socialImage: "https://pebblous.github.io/project/CURK/Mini-Project/CURK-2025-09-29/image/index.png",
+                socialImage: "https://blog.pebblous.ai/project/CURK/Mini-Project/CURK-2025-09-29/image/index.png",
                 defaultTheme:"light",
                  themes: {
-                    dark: { logoImage: "https://pebblous.github.io/image/Pebblous_BM_White_RGB.png", background: "#111827", textColor: "#9CA3AF" },
-                    light: { logoImage: "https://pebblous.github.io/image/Pebblous_BM_Orange_RGB.png", background: "#F9FAFB", textColor: "#4B5563" },
+                    dark: { logoImage: "https://blog.pebblous.ai/image/Pebblous_BM_White_RGB.png", background: "#111827", textColor: "#9CA3AF" },
+                    light: { logoImage: "https://blog.pebblous.ai/image/Pebblous_BM_Orange_RGB.png", background: "#F9FAFB", textColor: "#4B5563" },
                 }
             };
             
