--- a/project/AADS/aads-sim-01-terminal.html
+++ b/project/AADS/aads-sim-01-terminal.html
@@ -3,7 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AADS 프로젝트 - 터미널 시뮬레이션</title>
+    
+    <!-- SEO & SNS Meta Tags -->
+    <title>AADS: 자율형 AI 데이터 과학자 - 터미널 시뮬레이션 | Pebblous</title>
+    <meta name="description" content="(주)페블러스가 과기부 글로벌빅테크 프로젝트의 지원을 받아 개발하고 있는 자율형 AI 데이터 과학자, AADS의 프로세스 시뮬레이션을 경험해보세요. 데이터셋의 편향성을 개선하고 개인정보보호 규정을 준수하는 과정을 인터랙티브 터미널에서 직접 확인하실 수 있습니다.">
+    <meta name="keywords" content="AADS, Agentic AI, AI 데이터 과학자, AI Data Scientist, 페블러스, Pebblous, KISTI, Data Quality, 데이터 품질, Data Governance, 데이터 거버넌스, LLM, AI 에이전트, 데이터 편향성, 개인정보보호, 시뮬레이션, 합성데이터, 합성 데이터, synthetic data">
+    <meta name="robots" content="index, follow">
+
+    <!-- Favicon -->
+    <link rel="icon" href="https://www.pebblous.ai/favicon.ico" sizes="any">
+    <link rel="icon" href="https://www.pebblous.ai/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="https://www.pebblous.ai/apple-touch-icon.png">
+
+    <!-- Canonical & Alternate URLs -->
+    <link rel="canonical" href="https://aads.pebblous.ai/ko/">
+    <link rel="alternate" hreflang="ko" href="https://aads.pebblous.ai/ko/">
+    <link rel="alternate" hreflang="en" href="https://aads.pebblous.ai/en/">
+    <link rel="alternate" hreflang="x-default" href="https://aads.pebblous.ai/en/">
+
+    <!-- Open Graph (for Facebook, KakaoTalk, etc.) -->
+    <meta property="og:url" content="https://aads.pebblous.ai/ko/">
+    <meta property="og:title" content="AADS: 자율형 AI 데이터 과학자 - 터미널 시뮬레이션">
+    <meta property="og:description" content="AI가 스스로 데이터를 진단하고 개선하는 AADS 프로젝트의 작동 방식을 시뮬레이션으로 확인해보세요.">
+    <meta property="og:image" content="https://blog.pebblous.ai/aads/aads-og-image-ko-v1.png">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://aads.pebblous.ai/ko/">
+    <meta name="twitter:title" content="AADS: 자율형 AI 데이터 과학자 - 터미널 시뮬레이션">
+    <meta name="twitter:description" content="AI가 스스로 데이터를 진단하고 개선하는 AADS 프로젝트의 작동 방식을 시뮬레이션으로 확인해보세요.">
+    <meta name="twitter:image" content="https://blog.pebblous.ai/aads/aads-og-image-ko-v1.png">
+    
+    <!-- Styles and Scripts -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -86,7 +118,7 @@
 </head>
 <body class="min-h-screen p-4 sm:p-6 lg:p-8">
     <div class="absolute top-4 left-4 sm:top-6 sm:left-6 lg:top-8 lg:left-8 z-10">
-        <img src="https://pebblous.github.io/image/Pebblous_Brandmark_Orange.png" alt="Pebblous Logo" class="h-6 w-auto">
+        <img src="https://blog.pebblous.ai/image/Pebblous_Brandmark_Orange.png" alt="Pebblous Logo" class="h-6 w-auto">
     </div>
     <div class="max-w-7xl mx-auto">
         <header class="text-center mb-8">
