--- a/project/AADS/ko/index.html
+++ b/project/AADS/ko/index.html
@@ -16,24 +16,24 @@
     <link rel="apple-touch-icon" href="https://www.pebblous.ai/apple-touch-icon.png">
 
     <!-- Canonical & Alternate URLs -->
-    <link rel="canonical" href="https://blog.pebblous.ai/project/aads/ko/">
-    <link rel="alternate" hreflang="ko" href="https://blog.pebblous.ai/project/aads/ko/">
-    <link rel="alternate" hreflang="en" href="https://blog.pebblous.ai/project/aads/en/">
-    <link rel="alternate" hreflang="x-default" href="https://blog.pebblous.ai/project/aads/en/">
+    <link rel="canonical" href="https://blog.pebblous.ai/project/AADS/ko/">
+    <link rel="alternate" hreflang="ko" href="https://blog.pebblous.ai/project/AADS/ko/">
+    <link rel="alternate" hreflang="en" href="https://blog.pebblous.ai/project/AADS/en/">
+    <link rel="alternate" hreflang="x-default" href="https://blog.pebblous.ai/project/AADS/en/">
 
     <!-- Open Graph (for Facebook, KakaoTalk, etc.) -->
-    <meta property="og:url" content="https://blog.pebblous.ai/project/aads/ko">
+    <meta property="og:url" content="https://blog.pebblous.ai/project/AADS/ko">
     <meta property="og:title" content="AADS: 자율형 AI 데이터 과학자 - CLI 시뮬레이션">
     <meta property="og:description" content="AI가 스스로 데이터를 진단하고 개선하는 AADS 프로젝트의 작동 방식을 시뮬레이션으로 확인해보세요.">
-    <meta property="og:image" content="https://blog.pebblous.ai/project/aads/index.gif">
+    <meta property="og:image" content="https://blog.pebblous.ai/project/AADS/index.gif">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://blog.pebblous.ai/project/aads/ko">
+    <meta name="twitter:url" content="https://blog.pebblous.ai/project/AADS/ko">
     <meta name="twitter:title" content="AADS: 자율형 AI 데이터 과학자 - CLI 시뮬레이션">
     <meta name="twitter:description" content="AI가 스스로 데이터를 진단하고 개선하는 AADS 프로젝트의 작동 방식을 시뮬레이션으로 확인해보세요.">
-    <meta name="twitter:image" content="https://blog.pebblous.ai/project/aads/index.gif">
+    <meta name="twitter:image" content="https://blog.pebblous.ai/project/AADS/index.gif">
     
     <!-- Styles and Scripts -->
     <script src="https://cdn.tailwindcss.com"></script>
