--- a/project/AADS/ko/aads-sim-01-terminal.html
+++ b/project/AADS/ko/aads-sim-01-terminal.html
@@ -25,7 +25,7 @@
     <meta property="og:url" content="https://blog.pebblous.ai/project/AADS/ko">
     <meta property="og:title" content="AADS: 자율형 AI 데이터 과학자 - CLI 시뮬레이션">
     <meta property="og:description" content="AI가 스스로 데이터를 진단하고 개선하는 AADS 프로젝트의 작동 방식을 시뮬레이션으로 확인해보세요.">
-    <meta property="og:image" content="https://blog.pebblous.ai/project/AADS/index.gif">
+    <meta property="og:image" content="https://blog.pebblous.ai/project/AADS/index.png">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card -->
@@ -33,7 +33,7 @@
     <meta name="twitter:url" content="https://blog.pebblous.ai/project/AADS/ko">
     <meta name="twitter:title" content="AADS: 자율형 AI 데이터 과학자 - CLI 시뮬레이션">
     <meta name="twitter:description" content="AI가 스스로 데이터를 진단하고 개선하는 AADS 프로젝트의 작동 방식을 시뮬레이션으로 확인해보세요.">
-    <meta name="twitter:image" content="https://blog.pebblous.ai/project/AADS/index.gif">
+    <meta name="twitter:image" content="https://blog.pebblous.ai/project/AADS/index.png">
     
     <!-- Styles and Scripts -->
     <script src="https://cdn.tailwindcss.com"></script>
