--- a/project/AADS/ko/aads-sim-01-terminal.html
+++ b/project/AADS/ko/aads-sim-01-terminal.html
@@ -22,7 +22,7 @@
     <link rel="alternate" hreflang="x-default" href="https://blog.pebblous.ai/project/AADS/en/">
 
     <!-- Open Graph (for Facebook, KakaoTalk, etc.) -->
-    <meta property="og:url" content="https://blog.pebblous.ai/project/AADS/ko">
+    <meta property="og:url" content="https://blog.pebblous.ai/project/AADS/ko/">
     <meta property="og:title" content="AADS: 자율형 AI 데이터 과학자 - CLI 시뮬레이션">
     <meta property="og:description" content="AI가 스스로 데이터를 진단하고 개선하는 AADS 프로젝트의 작동 방식을 시뮬레이션으로 확인해보세요.">
     <meta property="og:image" content="https://blog.pebblous.ai/project/AADS/index.png">
@@ -30,7 +30,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://blog.pebblous.ai/project/AADS/ko">
+    <meta name="twitter:url" content="https://blog.pebblous.ai/project/AADS/ko/">
     <meta name="twitter:title" content="AADS: 자율형 AI 데이터 과학자 - CLI 시뮬레이션">
     <meta name="twitter:description" content="AI가 스스로 데이터를 진단하고 개선하는 AADS 프로젝트의 작동 방식을 시뮬레이션으로 확인해보세요.">
     <meta name="twitter:image" content="https://blog.pebblous.ai/project/AADS/index.png">
@@ -55,6 +55,8 @@
             border-radius: 0.5rem;
             padding: 1.5rem;
             box-shadow: 0 0 30px rgba(30, 144, 255, 0.1);
+            height: 600px; /* Fixed height */
+            overflow-y: auto; /* Add scrollbar on overflow */
         }
         .terminal-header {
             display: flex;
@@ -116,20 +118,28 @@
         }
     </style>
 </head>
-<body class="min-h-screen p-4 sm:p-6 lg:p-8">
-    <div class="absolute top-4 left-4 sm:top-6 sm:left-6 lg:top-8 lg:left-8 z-10">
-        <img src="https://blog.pebblous.ai/image/Pebblous_Brandmark_Orange.png" alt="Pebblous Logo" class="h-6 w-auto">
-    </div>
-    <div class="max-w-7xl mx-auto">
-        <header class="text-center mb-8">
-            <h1 class="text-3xl sm:text-4xl font-bold text-white">AADS: 자율형 AI 데이터 과학자</h1>
-            <p class="mt-2 text-lg text-slate-400">CLI 기반 프로세스 시뮬레이션</p>
-        </header>
+<body class="min-h-screen">
+    <header class="sticky top-0 z-20 py-3 backdrop-blur-lg bg-slate-950/80 border-b border-slate-800">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <!-- Top row for logo -->
+            <div class="flex justify-start h-8 items-center">
+                 <a href="https://pebblous.ai" target="_blank" rel="noopener noreferrer">
+                    <img src="https://blog.pebblous.ai/image/Pebblous_Brandmark_Orange.png" alt="Pebblous Logo" class="h-6 w-auto">
+                </a>
+            </div>
+            <!-- Bottom row for title -->
+            <div class="text-center">
+                <h1 class="text-3xl sm:text-4xl font-bold text-white leading-tight">AADS: 자율형 AI 데이터 과학자</h1>
+                <p class="text-base sm:text-lg text-slate-400 leading-tight mt-1">CLI 기반 프로세스 시뮬레이션</p>
+            </div>
+        </div>
+    </header>
 
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
             <!-- Main Visualization -->
             <div class="lg:col-span-2">
-                <div class="terminal min-h-[500px]">
+                <div id="terminal" class="terminal">
                     <div class="terminal-header">
                         <div class="terminal-dot" style="background-color: #ef4444;"></div>
                         <div class="terminal-dot" style="background-color: #f59e0b;"></div>
@@ -139,7 +149,7 @@
                     <div id="terminal-content" class="space-y-2">
                         <!-- Dynamic content goes here -->
                     </div>
-                     <div id="prompt-container" class="prompt mt-4" style="display: none;">
+                     <div id="prompt-container" class="prompt mt-4 flex items-center">
                         <span id="typed-text"></span><span class="cursor"></span>
                     </div>
                 </div>
@@ -185,9 +195,11 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const runBtn = document.getElementById('run-btn');
+            const terminal = document.getElementById('terminal'); // Get the terminal container
             const terminalContent = document.getElementById('terminal-content');
             const promptContainer = document.getElementById('prompt-container');
             const typedText = document.getElementById('typed-text');
+            const cursor = promptContainer.querySelector('.cursor');
 
             let isAnimating = false;
 
@@ -210,15 +222,21 @@
                 { text: '[성공] 프로세스 완료. 결과물: "최적화 및 규제 준수 완료된 데이터". 모델 학습 준비가 되었습니다.', type: 'final-success', delay: 500 },
                 { text: '[결과] 개선된 데이터, 개선후 품질보고서, 페블로스코프 가시화가 모두 준비되었습니다.', type: 'result', delay: 500 },
             ];
+            
+            // Initially show the prompt and cursor
+            promptContainer.style.display = 'flex';
+
 
             function typeCommand() {
                 let i = 0;
-                promptContainer.style.display = 'flex';
+                cursor.style.display = 'inline-block';
+                typedText.textContent = '';
                 const interval = setInterval(() => {
                     typedText.textContent += command[i];
                     i++;
                     if (i === command.length) {
                         clearInterval(interval);
+                        cursor.style.display = 'none';
                         setTimeout(runLogs, 500);
                     }
                 }, 50);
@@ -248,7 +266,7 @@
                             lineEl.classList.add('output');
                         }
                         terminalContent.appendChild(lineEl);
-                        terminalContent.scrollTop = terminalContent.scrollHeight;
+                        terminal.scrollTop = terminal.scrollHeight; // Auto-scroll the terminal
                         resolve();
                     }, line.delay);
                 });
@@ -257,8 +275,9 @@
             async function runLogs() {
                 const promptLine = document.createElement('div');
                 promptLine.className = 'line prompt';
-                promptLine.innerHTML = `<span>${command}</span>`;
+                promptLine.innerHTML = `<span style="white-space: pre-wrap; word-break: break-all;">${command}</span>`;
                 terminalContent.appendChild(promptLine);
+                terminal.scrollTop = terminal.scrollHeight; // Auto-scroll the terminal
                 promptContainer.style.display = 'none';
 
                 for (const line of logLines) {
@@ -279,6 +298,7 @@
                 // Clear previous run
                 terminalContent.innerHTML = '';
                 typedText.textContent = '';
+                promptContainer.style.display = 'flex';
                 
                 typeCommand();
             }
@@ -288,10 +308,4 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
 
